SUCCESS ALERT WAS MISSING

--- a/scss/mu_bs.css
+++ b/scss/mu_bs.css
@@ -45,17 +45,17 @@ $border-width: 1px;
   --bs-secondary: #004851;
   --bs-success: #95c11f;
   --bs-info: #0091d3;
-  --bs-warning: hsl(21deg, 100%, 52%);
-  --bs-danger: hsl(346deg, 100%, 42%);
+  --bs-warning: hsl(21, 100%, 52%);
+  --bs-danger: hsl(346, 100%, 42%);
   --bs-light: ghostwhite;
-  --bs-dark: hsl(20deg, 4%, 17%);
+  --bs-dark: hsl(20, 4%, 17%);
   --bs-tertiary: #66C5D2;
   --bs-quaternary: #A5DDE5;
-  --bs-mgep: hsl(21deg, 71%, 52%);
+  --bs-mgep: hsl(21, 71%, 52%);
   --bs-huezi: #A50050;
   --bs-eteo: #44883E;
-  --bs-pro: hsl(346deg, 100%, 42%);
-  --bs-cta: hsl(44deg, 100%, 59%);
+  --bs-pro: hsl(346, 100%, 42%);
+  --bs-cta: hsl(44, 100%, 59%);
   --bs-primary-rgb: 0, 163, 173;
   --bs-secondary-rgb: 0, 72, 81;
   --bs-success-rgb: 149, 193, 31;
@@ -104,7 +104,7 @@ $border-width: 1px;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: hsl(20deg, 4%, 17%);
+  --bs-body-color: hsl(20, 4%, 17%);
   --bs-body-color-rgb: 45, 43, 42;
   --bs-body-bg: #e3e3e3;
   --bs-body-bg-rgb: 227, 227, 227;
@@ -146,8 +146,8 @@ $border-width: 1px;
   --bs-focus-ring-box-shadow: var(--bs-focus-ring-x, 0) var(--bs-focus-ring-y, 0) var(--bs-focus-ring-blur, 0) var(--bs-focus-ring-width) var(--bs-focus-ring-color);
   --bs-form-valid-color: #95c11f;
   --bs-form-valid-border-color: #95c11f;
-  --bs-form-invalid-color: hsl(346deg, 100%, 42%);
-  --bs-form-invalid-border-color: hsl(346deg, 100%, 42%);
+  --bs-form-invalid-color: hsl(346, 100%, 42%);
+  --bs-form-invalid-border-color: hsl(346, 100%, 42%);
 }
 
 [data-bs-theme=dark] {
@@ -2047,7 +2047,7 @@ progress {
 
 .table-dark {
   --bs-table-color: #fff;
-  --bs-table-bg: hsl(20deg, 4%, 17%);
+  --bs-table-bg: hsl(20, 4%, 17%);
   --bs-table-border-color: #42403f;
   --bs-table-striped-bg: #383635;
   --bs-table-striped-color: #fff;
@@ -2872,7 +2872,7 @@ textarea.form-control-lg {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: var(--bs-form-invalid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='hsl%28346deg, 100%, 42%%29'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='hsl%28346deg, 100%, 42%%29' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='hsl%28346, 100%, 42%%29'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='hsl%28346, 100%, 42%%29' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -2891,7 +2891,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-invalid-border-color);
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='hsl%28346deg, 100%, 42%%29'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='hsl%28346deg, 100%, 42%%29' stroke='none'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='hsl%28346, 100%, 42%%29'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='hsl%28346, 100%, 42%%29' stroke='none'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -2937,7 +2937,7 @@ textarea.form-control-lg {
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
-  --bs-btn-color: hsl(20deg, 4%, 17%);
+  --bs-btn-color: hsl(20, 4%, 17%);
   --bs-btn-bg: transparent;
   --bs-btn-border-width: var(--bs-border-width);
   --bs-btn-border-color: transparent;
@@ -3078,8 +3078,8 @@ textarea.form-control-lg {
 
 .btn-warning {
   --bs-btn-color: #000;
-  --bs-btn-bg: hsl(21deg, 100%, 52%);
-  --bs-btn-border-color: hsl(21deg, 100%, 52%);
+  --bs-btn-bg: hsl(21, 100%, 52%);
+  --bs-btn-border-color: hsl(21, 100%, 52%);
   --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #ff782f;
   --bs-btn-hover-border-color: #ff7023;
@@ -3089,14 +3089,14 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #ff7023;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: hsl(21deg, 100%, 52%);
-  --bs-btn-disabled-border-color: hsl(21deg, 100%, 52%);
+  --bs-btn-disabled-bg: hsl(21, 100%, 52%);
+  --bs-btn-disabled-border-color: hsl(21, 100%, 52%);
 }
 
 .btn-danger {
   --bs-btn-color: #fff;
-  --bs-btn-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-bg: hsl(346, 100%, 42%);
+  --bs-btn-border-color: hsl(346, 100%, 42%);
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #b6002b;
   --bs-btn-hover-border-color: #ab0028;
@@ -3106,8 +3106,8 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #a10026;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-disabled-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-disabled-bg: hsl(346, 100%, 42%);
+  --bs-btn-disabled-border-color: hsl(346, 100%, 42%);
 }
 
 .btn-light {
@@ -3129,8 +3129,8 @@ textarea.form-control-lg {
 
 .btn-dark {
   --bs-btn-color: #fff;
-  --bs-btn-bg: hsl(20deg, 4%, 17%);
-  --bs-btn-border-color: hsl(20deg, 4%, 17%);
+  --bs-btn-bg: hsl(20, 4%, 17%);
+  --bs-btn-border-color: hsl(20, 4%, 17%);
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #4d4b4a;
   --bs-btn-hover-border-color: #42403f;
@@ -3140,8 +3140,8 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #42403f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: hsl(20deg, 4%, 17%);
-  --bs-btn-disabled-border-color: hsl(20deg, 4%, 17%);
+  --bs-btn-disabled-bg: hsl(20, 4%, 17%);
+  --bs-btn-disabled-border-color: hsl(20, 4%, 17%);
 }
 
 .btn-tertiary {
@@ -3180,8 +3180,8 @@ textarea.form-control-lg {
 
 .btn-mgep {
   --bs-btn-color: #000;
-  --bs-btn-bg: hsl(21deg, 71%, 52%);
-  --bs-btn-border-color: hsl(21deg, 71%, 52%);
+  --bs-btn-bg: hsl(21, 71%, 52%);
+  --bs-btn-border-color: hsl(21, 71%, 52%);
   --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #e1814d;
   --bs-btn-hover-border-color: #e07a43;
@@ -3191,8 +3191,8 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #e07a43;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: hsl(21deg, 71%, 52%);
-  --bs-btn-disabled-border-color: hsl(21deg, 71%, 52%);
+  --bs-btn-disabled-bg: hsl(21, 71%, 52%);
+  --bs-btn-disabled-border-color: hsl(21, 71%, 52%);
 }
 
 .btn-huezi {
@@ -3231,8 +3231,8 @@ textarea.form-control-lg {
 
 .btn-pro {
   --bs-btn-color: #fff;
-  --bs-btn-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-bg: hsl(346, 100%, 42%);
+  --bs-btn-border-color: hsl(346, 100%, 42%);
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #b6002b;
   --bs-btn-hover-border-color: #ab0028;
@@ -3242,14 +3242,14 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #a10026;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-disabled-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-disabled-bg: hsl(346, 100%, 42%);
+  --bs-btn-disabled-border-color: hsl(346, 100%, 42%);
 }
 
 .btn-cta {
   --bs-btn-color: #000;
-  --bs-btn-bg: hsl(44deg, 100%, 59%);
-  --bs-btn-border-color: hsl(44deg, 100%, 59%);
+  --bs-btn-bg: hsl(44, 100%, 59%);
+  --bs-btn-border-color: hsl(44, 100%, 59%);
   --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #ffcf4d;
   --bs-btn-hover-border-color: #ffcd43;
@@ -3259,8 +3259,8 @@ textarea.form-control-lg {
   --bs-btn-active-border-color: #ffcd43;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: hsl(44deg, 100%, 59%);
-  --bs-btn-disabled-border-color: hsl(44deg, 100%, 59%);
+  --bs-btn-disabled-bg: hsl(44, 100%, 59%);
+  --bs-btn-disabled-border-color: hsl(44, 100%, 59%);
 }
 
 .btn-outline-primary {
@@ -3332,36 +3332,36 @@ textarea.form-control-lg {
 }
 
 .btn-outline-warning {
-  --bs-btn-color: hsl(21deg, 100%, 52%);
-  --bs-btn-border-color: hsl(21deg, 100%, 52%);
+  --bs-btn-color: hsl(21, 100%, 52%);
+  --bs-btn-border-color: hsl(21, 100%, 52%);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: hsl(21deg, 100%, 52%);
-  --bs-btn-hover-border-color: hsl(21deg, 100%, 52%);
+  --bs-btn-hover-bg: hsl(21, 100%, 52%);
+  --bs-btn-hover-border-color: hsl(21, 100%, 52%);
   --bs-btn-focus-shadow-rgb: 255, 96, 10;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: hsl(21deg, 100%, 52%);
-  --bs-btn-active-border-color: hsl(21deg, 100%, 52%);
+  --bs-btn-active-bg: hsl(21, 100%, 52%);
+  --bs-btn-active-border-color: hsl(21, 100%, 52%);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: hsl(21deg, 100%, 52%);
+  --bs-btn-disabled-color: hsl(21, 100%, 52%);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: hsl(21deg, 100%, 52%);
+  --bs-btn-disabled-border-color: hsl(21, 100%, 52%);
   --bs-gradient: none;
 }
 
 .btn-outline-danger {
-  --bs-btn-color: hsl(346deg, 100%, 42%);
-  --bs-btn-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-color: hsl(346, 100%, 42%);
+  --bs-btn-border-color: hsl(346, 100%, 42%);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-hover-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-hover-bg: hsl(346, 100%, 42%);
+  --bs-btn-hover-border-color: hsl(346, 100%, 42%);
   --bs-btn-focus-shadow-rgb: 214, 0, 50;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-active-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-active-bg: hsl(346, 100%, 42%);
+  --bs-btn-active-border-color: hsl(346, 100%, 42%);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: hsl(346deg, 100%, 42%);
+  --bs-btn-disabled-color: hsl(346, 100%, 42%);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-disabled-border-color: hsl(346, 100%, 42%);
   --bs-gradient: none;
 }
 
@@ -3383,19 +3383,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-dark {
-  --bs-btn-color: hsl(20deg, 4%, 17%);
-  --bs-btn-border-color: hsl(20deg, 4%, 17%);
+  --bs-btn-color: hsl(20, 4%, 17%);
+  --bs-btn-border-color: hsl(20, 4%, 17%);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: hsl(20deg, 4%, 17%);
-  --bs-btn-hover-border-color: hsl(20deg, 4%, 17%);
+  --bs-btn-hover-bg: hsl(20, 4%, 17%);
+  --bs-btn-hover-border-color: hsl(20, 4%, 17%);
   --bs-btn-focus-shadow-rgb: 45, 43, 42;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: hsl(20deg, 4%, 17%);
-  --bs-btn-active-border-color: hsl(20deg, 4%, 17%);
+  --bs-btn-active-bg: hsl(20, 4%, 17%);
+  --bs-btn-active-border-color: hsl(20, 4%, 17%);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: hsl(20deg, 4%, 17%);
+  --bs-btn-disabled-color: hsl(20, 4%, 17%);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: hsl(20deg, 4%, 17%);
+  --bs-btn-disabled-border-color: hsl(20, 4%, 17%);
   --bs-gradient: none;
 }
 
@@ -3434,19 +3434,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-mgep {
-  --bs-btn-color: hsl(21deg, 71%, 52%);
-  --bs-btn-border-color: hsl(21deg, 71%, 52%);
+  --bs-btn-color: hsl(21, 71%, 52%);
+  --bs-btn-border-color: hsl(21, 71%, 52%);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: hsl(21deg, 71%, 52%);
-  --bs-btn-hover-border-color: hsl(21deg, 71%, 52%);
+  --bs-btn-hover-bg: hsl(21, 71%, 52%);
+  --bs-btn-hover-border-color: hsl(21, 71%, 52%);
   --bs-btn-focus-shadow-rgb: 220, 107, 46;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: hsl(21deg, 71%, 52%);
-  --bs-btn-active-border-color: hsl(21deg, 71%, 52%);
+  --bs-btn-active-bg: hsl(21, 71%, 52%);
+  --bs-btn-active-border-color: hsl(21, 71%, 52%);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: hsl(21deg, 71%, 52%);
+  --bs-btn-disabled-color: hsl(21, 71%, 52%);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: hsl(21deg, 71%, 52%);
+  --bs-btn-disabled-border-color: hsl(21, 71%, 52%);
   --bs-gradient: none;
 }
 
@@ -3485,36 +3485,36 @@ textarea.form-control-lg {
 }
 
 .btn-outline-pro {
-  --bs-btn-color: hsl(346deg, 100%, 42%);
-  --bs-btn-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-color: hsl(346, 100%, 42%);
+  --bs-btn-border-color: hsl(346, 100%, 42%);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-hover-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-hover-bg: hsl(346, 100%, 42%);
+  --bs-btn-hover-border-color: hsl(346, 100%, 42%);
   --bs-btn-focus-shadow-rgb: 214, 0, 50;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: hsl(346deg, 100%, 42%);
-  --bs-btn-active-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-active-bg: hsl(346, 100%, 42%);
+  --bs-btn-active-border-color: hsl(346, 100%, 42%);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: hsl(346deg, 100%, 42%);
+  --bs-btn-disabled-color: hsl(346, 100%, 42%);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: hsl(346deg, 100%, 42%);
+  --bs-btn-disabled-border-color: hsl(346, 100%, 42%);
   --bs-gradient: none;
 }
 
 .btn-outline-cta {
-  --bs-btn-color: hsl(44deg, 100%, 59%);
-  --bs-btn-border-color: hsl(44deg, 100%, 59%);
+  --bs-btn-color: hsl(44, 100%, 59%);
+  --bs-btn-border-color: hsl(44, 100%, 59%);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: hsl(44deg, 100%, 59%);
-  --bs-btn-hover-border-color: hsl(44deg, 100%, 59%);
+  --bs-btn-hover-bg: hsl(44, 100%, 59%);
+  --bs-btn-hover-border-color: hsl(44, 100%, 59%);
   --bs-btn-focus-shadow-rgb: 255, 199, 46;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: hsl(44deg, 100%, 59%);
-  --bs-btn-active-border-color: hsl(44deg, 100%, 59%);
+  --bs-btn-active-bg: hsl(44, 100%, 59%);
+  --bs-btn-active-border-color: hsl(44, 100%, 59%);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: hsl(44deg, 100%, 59%);
+  --bs-btn-disabled-color: hsl(44, 100%, 59%);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: hsl(44deg, 100%, 59%);
+  --bs-btn-disabled-border-color: hsl(44, 100%, 59%);
   --bs-gradient: none;
 }
 
@@ -4779,7 +4779,7 @@ textarea.form-control-lg {
   --bs-accordion-btn-padding-y: 1rem;
   --bs-accordion-btn-color: var(--bs-body-color);
   --bs-accordion-btn-bg: var(--bs-accordion-bg);
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='hsl%2820deg, 4%, 17%%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='hsl%2820, 4%, 17%%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
@@ -12675,6 +12675,8 @@ textarea.form-control-lg {
           padding-inline-end: 3em;
   padding-block: 1em;
   text-align: start;
+  background-color: #004851;
+  color: ghostwhite;
 }
 
 .card-footer {
@@ -12695,6 +12697,7 @@ textarea.form-control-lg {
   text-align: end;
   -webkit-margin-start: auto;
           margin-inline-start: auto;
+  background-color: #66C5D2;
 }
 
 .alert-warning::before {
