--- a/public/css/mu_bs.css
+++ b/public/css/mu_bs.css
@@ -6,6 +6,7 @@
 /* CTA: Call to action. Descubre más, Apuntate... */
 /* Profesionalentzako Prestakuntza (PRO) */
 /* Beste batzuk */
+@import "https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;700&display=swap";
 /*
 $border-radius: 0.25rem;
 $border-width: 1px;
@@ -100,7 +101,7 @@ $border-width: 1px;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: var(--bs-font-sans-serif);
+  --bs-body-font-family: "Encode Sans", sans-serif;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
@@ -6122,7 +6123,7 @@ textarea.form-control-lg {
   display: block;
   padding: var(--bs-tooltip-arrow-height);
   margin: var(--bs-tooltip-margin);
-  font-family: var(--bs-font-sans-serif);
+  font-family: "Encode Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6232,7 +6233,7 @@ textarea.form-control-lg {
   z-index: var(--bs-popover-zindex);
   display: block;
   max-width: var(--bs-popover-max-width);
-  font-family: var(--bs-font-sans-serif);
+  font-family: "Encode Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
