--- a/scss/mu_bs.scss
+++ b/scss/mu_bs.scss
@@ -47,6 +47,10 @@ $morea: #814795;
 $asfabrik: #ff2e17;
 $bbf: #d6382d;
 
+// Font aldaketa
+@import "https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;700&display=swap";
+$font-family-base: 'Encode Sans', sans-serif;
+
 // Bootstrap aldaketak
 @import "../bootstrap/scss/functions";
 
