--- a/public/css/mu_bs.css
+++ b/public/css/mu_bs.css
@@ -14,25 +14,50 @@ $border-width: 1px;
 :root {
   --bs-tertiary-bg-subtle: #e0f3f6;
   --bs-tertiary-text-emphasis: #294f54;
-  --bs-tertiary-border-subtle: ${$state-border-subtle-color};
+  --bs-tertiary-border-subtle: #c2e8ed;
   --bs-quaternary-bg-subtle: #edf8fa;
   --bs-quaternary-text-emphasis: #42585c;
-  --bs-quaternary-border-subtle: ${$state-border-subtle-color};
+  --bs-quaternary-border-subtle: #dbf1f5;
   --bs-mgep-bg-subtle: #f8e1d5;
   --bs-mgep-text-emphasis: #582b12;
-  --bs-mgep-border-subtle: ${$state-border-subtle-color};
+  --bs-mgep-border-subtle: #f1c4ab;
   --bs-huezi-bg-subtle: #edccdc;
   --bs-huezi-text-emphasis: #420020;
-  --bs-huezi-border-subtle: ${$state-border-subtle-color};
+  --bs-huezi-border-subtle: #db99b9;
   --bs-eteo-bg-subtle: #dae7d8;
   --bs-eteo-text-emphasis: #1b3619;
-  --bs-eteo-border-subtle: ${$state-border-subtle-color};
+  --bs-eteo-border-subtle: #b4cfb2;
   --bs-pro-bg-subtle: #f7ccd6;
   --bs-pro-text-emphasis: #560014;
-  --bs-pro-border-subtle: ${$state-border-subtle-color};
+  --bs-pro-border-subtle: #ef99ad;
   --bs-cta-bg-subtle: #fff4d5;
   --bs-cta-text-emphasis: #665012;
-  --bs-cta-border-subtle: ${$state-border-subtle-color};
+  --bs-cta-border-subtle: #ffe9ab;
+}
+
+[data-bs-theme=dark] {
+  /* begitu */
+  --bs-tertiary-bg-subtle: #14272a;
+  --bs-tertiary-text-emphasis: tiny-color(#66C5D2, 40%);
+  --bs-tertiary-border-subtle: #3d767e;
+  --bs-quaternary-bg-subtle: #212c2e;
+  --bs-quaternary-text-emphasis: tiny-color(#A5DDE5, 40%);
+  --bs-quaternary-border-subtle: #638589;
+  --bs-mgep-bg-subtle: #2c1509;
+  --bs-mgep-text-emphasis: tiny-color(hsl(21, 71%, 52%), 40%);
+  --bs-mgep-border-subtle: #84401c;
+  --bs-huezi-bg-subtle: #210010;
+  --bs-huezi-text-emphasis: tiny-color(#A50050, 40%);
+  --bs-huezi-border-subtle: #630030;
+  --bs-eteo-bg-subtle: #0e1b0c;
+  --bs-eteo-text-emphasis: tiny-color(#44883E, 40%);
+  --bs-eteo-border-subtle: #295225;
+  --bs-pro-bg-subtle: #2b000a;
+  --bs-pro-text-emphasis: tiny-color(hsl(346, 100%, 42%), 40%);
+  --bs-pro-border-subtle: #80001e;
+  --bs-cta-bg-subtle: #332809;
+  --bs-cta-text-emphasis: tiny-color(hsl(44, 100%, 59%), 40%);
+  --bs-cta-border-subtle: #99771c;
 }
 
 /*!
@@ -70,7 +95,7 @@ $border-width: 1px;
   --bs-success: #95c11f;
   --bs-info: #0091d3;
   --bs-warning: hsl(21, 100%, 52%);
-  --bs-danger: hsl(346, 100%, 42%);
+  --bs-danger: #BA2E1E;
   --bs-light: ghostwhite;
   --bs-dark: hsl(20, 4%, 17%);
   --bs-tertiary: #66C5D2;
@@ -85,7 +110,7 @@ $border-width: 1px;
   --bs-success-rgb: 149, 193, 31;
   --bs-info-rgb: 0, 145, 211;
   --bs-warning-rgb: 255, 96, 10;
-  --bs-danger-rgb: 214, 0, 50;
+  --bs-danger-rgb: 186, 46, 30;
   --bs-light-rgb: 248, 248, 255;
   --bs-dark-rgb: 45, 43, 42;
   --bs-tertiary-rgb: 102, 197, 210;
@@ -100,7 +125,7 @@ $border-width: 1px;
   --bs-success-text-emphasis: #3c4d0c;
   --bs-info-text-emphasis: #003a54;
   --bs-warning-text-emphasis: #662604;
-  --bs-danger-text-emphasis: #560014;
+  --bs-danger-text-emphasis: #4a120c;
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #ccedef;
@@ -108,7 +133,7 @@ $border-width: 1px;
   --bs-success-bg-subtle: #eaf3d2;
   --bs-info-bg-subtle: #cce9f6;
   --bs-warning-bg-subtle: #ffdfce;
-  --bs-danger-bg-subtle: #f7ccd6;
+  --bs-danger-bg-subtle: #f1d5d2;
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #99dade;
@@ -116,7 +141,7 @@ $border-width: 1px;
   --bs-success-border-subtle: #d5e6a5;
   --bs-info-border-subtle: #99d3ed;
   --bs-warning-border-subtle: #ffbf9d;
-  --bs-danger-border-subtle: #ef99ad;
+  --bs-danger-border-subtle: #e3aba5;
   --bs-light-border-subtle: #e9ecef;
   --bs-dark-border-subtle: #adb5bd;
   --bs-white-rgb: 255, 255, 255;
@@ -170,8 +195,8 @@ $border-width: 1px;
   --bs-focus-ring-color: rgba(0, 163, 173, 0.25);
   --bs-form-valid-color: #95c11f;
   --bs-form-valid-border-color: #95c11f;
-  --bs-form-invalid-color: hsl(346, 100%, 42%);
-  --bs-form-invalid-border-color: hsl(346, 100%, 42%);
+  --bs-form-invalid-color: #BA2E1E;
+  --bs-form-invalid-border-color: #BA2E1E;
 }
 
 [data-bs-theme=dark] {
@@ -195,7 +220,7 @@ $border-width: 1px;
   --bs-success-text-emphasis: #bfda79;
   --bs-info-text-emphasis: #66bde5;
   --bs-warning-text-emphasis: #ffa06c;
-  --bs-danger-text-emphasis: #e66684;
+  --bs-danger-text-emphasis: #d68278;
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #002123;
@@ -203,7 +228,7 @@ $border-width: 1px;
   --bs-success-bg-subtle: #1e2706;
   --bs-info-bg-subtle: #001d2a;
   --bs-warning-bg-subtle: #331302;
-  --bs-danger-bg-subtle: #2b000a;
+  --bs-danger-bg-subtle: #250906;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #006268;
@@ -211,7 +236,7 @@ $border-width: 1px;
   --bs-success-border-subtle: #597413;
   --bs-info-border-subtle: #00577f;
   --bs-warning-border-subtle: #993a06;
-  --bs-danger-border-subtle: #80001e;
+  --bs-danger-border-subtle: #701c12;
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
@@ -2048,13 +2073,13 @@ progress {
 
 .table-danger {
   --bs-table-color: #000;
-  --bs-table-bg: #f7ccd6;
-  --bs-table-border-color: #deb8c1;
-  --bs-table-striped-bg: #ebc2cb;
+  --bs-table-bg: #f1d5d2;
+  --bs-table-border-color: #d9c0bd;
+  --bs-table-striped-bg: #e5cac8;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #deb8c1;
+  --bs-table-active-bg: #d9c0bd;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e4bdc6;
+  --bs-table-hover-bg: #dfc5c2;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2916,7 +2941,7 @@ textarea.form-control-lg {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: var(--bs-form-invalid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='hsl%28346, 100%, 42%%29'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='hsl%28346, 100%, 42%%29' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23BA2E1E'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23BA2E1E' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -2935,7 +2960,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-invalid-border-color);
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='hsl%28346, 100%, 42%%29'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='hsl%28346, 100%, 42%%29' stroke='none'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23BA2E1E'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23BA2E1E' stroke='none'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -3139,19 +3164,19 @@ textarea.form-control-lg {
 
 .btn-danger {
   --bs-btn-color: #fff;
-  --bs-btn-bg: hsl(346, 100%, 42%);
-  --bs-btn-border-color: hsl(346, 100%, 42%);
+  --bs-btn-bg: #BA2E1E;
+  --bs-btn-border-color: #BA2E1E;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #b6002b;
-  --bs-btn-hover-border-color: #ab0028;
-  --bs-btn-focus-shadow-rgb: 220, 38, 81;
+  --bs-btn-hover-bg: #9e271a;
+  --bs-btn-hover-border-color: #952518;
+  --bs-btn-focus-shadow-rgb: 196, 77, 64;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #ab0028;
-  --bs-btn-active-border-color: #a10026;
+  --bs-btn-active-bg: #952518;
+  --bs-btn-active-border-color: #8c2317;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: hsl(346, 100%, 42%);
-  --bs-btn-disabled-border-color: hsl(346, 100%, 42%);
+  --bs-btn-disabled-bg: #BA2E1E;
+  --bs-btn-disabled-border-color: #BA2E1E;
 }
 
 .btn-light {
@@ -3393,19 +3418,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-danger {
-  --bs-btn-color: hsl(346, 100%, 42%);
-  --bs-btn-border-color: hsl(346, 100%, 42%);
+  --bs-btn-color: #BA2E1E;
+  --bs-btn-border-color: #BA2E1E;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: hsl(346, 100%, 42%);
-  --bs-btn-hover-border-color: hsl(346, 100%, 42%);
-  --bs-btn-focus-shadow-rgb: 214, 0, 50;
+  --bs-btn-hover-bg: #BA2E1E;
+  --bs-btn-hover-border-color: #BA2E1E;
+  --bs-btn-focus-shadow-rgb: 186, 46, 30;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: hsl(346, 100%, 42%);
-  --bs-btn-active-border-color: hsl(346, 100%, 42%);
+  --bs-btn-active-bg: #BA2E1E;
+  --bs-btn-active-border-color: #BA2E1E;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: hsl(346, 100%, 42%);
+  --bs-btn-disabled-color: #BA2E1E;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: hsl(346, 100%, 42%);
+  --bs-btn-disabled-border-color: #BA2E1E;
   --bs-gradient: none;
 }
 
@@ -7316,7 +7341,7 @@ textarea.form-control-lg {
 
 .text-bg-danger {
   color: #fff !important;
-  background-color: RGBA(214, 0, 50, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(186, 46, 30, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-light {
@@ -7414,8 +7439,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-danger-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-danger:hover, .link-danger:focus {
-  color: RGBA(171, 0, 40, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(171, 0, 40, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(149, 37, 24, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(149, 37, 24, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-light {
@@ -12727,6 +12752,10 @@ textarea.form-control-lg {
 }
 .card {
   background-color: #fff;
+}
+
+[data-bs-theme=dark] .card, .card[data-bs-theme=dark] {
+  background-color: hsl(20, 4%, 17%);
 }
 
 .card-header {
