SEMICOLON WAS MISSING

--- a/scss/mu_bs.scss
+++ b/scss/mu_bs.scss
@@ -46,7 +46,7 @@ $urdina: #0091d3;
 $morea: #814795;
 $asfabrik: #ff2e17;
 $bbf: #d6382d;
-$gorria: #BA2E1E
+$gorria: #BA2E1E;
 
 /* Nik gehitutakoa */
 
