--- a/public/css/mu_bs.css
+++ b/public/css/mu_bs.css
@@ -6,6 +6,7 @@
 /* CTA: Call to action. Descubre más, Apuntate... */
 /* Profesionalentzako Prestakuntza (PRO) */
 /* Beste batzuk */
+/* Nik gehitutakoa */
 @import "https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;700&display=swap";
 /*
 $border-radius: 0.25rem;
