--- a/scss/mu_bs.scss
+++ b/scss/mu_bs.scss
@@ -14,8 +14,8 @@ $mgep-distira-50: hsl(35, 87%, 73%);
 /* Humanitate eta Hezkuntza Zientzien Fakultatea (HUEZI) */
 $huezi-iluna: #6C1D45;
 $huezi: #A50050;
-$huesi-distira: #DA1884;
-$huesi-distira-50: #ED8CC2;
+$huezi-distira: #DA1884;
+$huezi-distira-50: #ED8CC2;
 
 /* Empresagintza (ETEO) */
 $eteo-iluna: #275D38;
